# MIS-Robot

./: README.md
DynamixelSDK/ros/dynamixel_sdk_examples/: CMakeLists.txt
DynamixelSDK/ros/dynamixel_sdk_examples/msg/: SyncSetVelocity.msg
DynamixelSDK/ros/dynamixel_sdk_examples/src/: bulk_read_write_node.cpp  read_write_node.cpp  read_write_stop.cpp  read_write_winding_node.cpp  sync_read_write_node.cpp  sync_read_write_velocity_node.cpp  sync_read_write_winding_node.cpp
DynamixelSDK/ros/dynamixel_sdk_examples/srv/: SyncGetVelocity.srv
franka_joystick_control/: CMakeLists.txt  package.xml
franka_joystick_control/include/franka_joystick_control/: franka_joystick_control_lib.h
franka_joystick_control/launch/: joystick_control.launch  joystick_publisher.launch
franka_joystick_control/src/: franka_joystick_control.cpp  franka_joystick_control_lib.cpp  joystick_pub.cpp
franka_mis_controller/: CMakeLists.txt
franka_mis_controller/cfg/: compliance_param.cfg  desired_mass_param.cfg
franka_mis_controller/include/franka_mis_controllers/: cartesian_velocity_example_controller.h  force_example_controller.h  pseudo_inversion.h
franka_mis_controller/launch/: force_controller.launch  franka_mis_controllers.launch
franka_mis_controllers/: CMakeLists.txt  franka_mis_controllers_plugin.xml  package.xml
franka_mis_controllers/config/: franka_mis_controllers.yaml
franka_mis_controllers/include/franka_mis_controllers/: cartesian_velocity_controller.h  force_controller.h
franka_mis_controllers/launch/: cartesian_velocity_controller.launch  force_controller.launch  franka_mis_controllers.launch
franka_mis_controllers/src/: cartesian_velocity_controller.cpp  cartesian_velocity_example_controller.cpp  force_controller.cpp  force_example_controller.cpp
franka_mis_description/: CMakeLists.txt  package.xml
franka_mis_description/config/: mis.rviz
franka_mis_description/launch/: display.launch  gazebo.launch
franka_mis_description/meshes/: MonitorStand.STL  chobot_base.STL  chobot_camera.STL  chobot_chobot.STL  chobot_cover.STL  chobot_disk.STL  human.STL  joy.STL  mon1.STL  mon2.STL  platna.STL
franka_mis_description/urdf/: chobot_mis_macro.xacro  franka_mis_description.urdf  stol_basic.csv  table_mis.xacro  table_mis_macro.xacro
franka_mis_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
franka_mis_moveit_config/config/: franka_mis.srdf
franka_mis_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
joystick_msgs/: CMakeLists.txt  package.xml
mis_project/: CMakeLists.txt  package.xml
mis_project/include/mis_project/: mis_project.h  mis_project.ui
mis_project/launch/: mis.launch  mis2.launch  mis3.launch  servo (copy).launch  servo.launch
mis_project/media/: joystick1.odg  no1_logo.xcf
mis_project/nodes/: mis_gui_node.cpp
mis_project/src/: mis_project.cpp
