<?xml version="1.0"?>
<package format="2">
  <name>joystick_msgs</name>
  <version>0.0.0</version>
  <description>The joystick_msgs package</description>

  <maintainer email="tomas@todo.todo">tomas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
  </export>
</package>
